# sync2smugmug

./: .gitignore  README.md  config.py  main.py  obtain_new_oauth_token.py  pyproject.toml  requirements.txt  sync2smugmug.conf  tests.py
scanner/: __init__.py  album.py  image.py  lightroom.py  objects.py  picasa.py  policy.py  scan.py  smugmug.py  utils.py
scripts/: build.sh
src/: obtain_new_oauth_token.py
src/sync2smugmug/: __main__.py  configuration.py  disk.py  event_manager.py  events.py  handlers.py  models.py  policy.py  protocols.py  sync.py
src/sync2smugmug/online/: online.py  smugmug.py
src/sync2smugmug/optimizations/: __init__.py
src/sync2smugmug/scan/: disk_scanner.py  online_scanner.py
src/sync2smugmug/utils/: image_tools.py  node_tools.py
sync2smugmug/: __main__.py  actions.py  concurrent_tasks.py  config.py  configuration.py  disk.py  event_manager.py  events.py  handlers.py  image.py  models.py  node.py  policy.py  protocols.py  sync.py  utils.py
sync2smugmug/disk/: __init__.py  image.py  node.py  optimizer.py  pre_process.py  scanner.py
sync2smugmug/lightroom/: __init__.py  lightroom.py
sync2smugmug/online/: online.py  smugmug.py
sync2smugmug/optimizations/: __init__.py
sync2smugmug/optimizations/disk/: __init__.py  cleanup.py  conversion.py  (+3 more)
sync2smugmug/picasa/: __init__.py  picasa.py
sync2smugmug/scan/: disk_scanner.py  online_scanner.py
sync2smugmug/smugmug/: __init__.py  connection.py  image.py  node.py  scanner.py
sync2smugmug/utils/: general_tools.py  image_tools.py  node_tools.py
utils/: __init__.py  utils.py
(+16 files in other folders)
